--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-
+JWT_SECRET="dsaijsjfbajffsafasfaj"
+DB_URL='mongodb+srv://venusaimabbu2003:8k9OiLMxdzuMmIwN@cluster0.znkxr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
